--- a/www/styles.css
+++ b/www/styles.css
@@ -3,3 +3,18 @@
 @tailwind components;
 /* purgecss end ignore */
 @tailwind utilities;
+
+mapouter {
+  position:relative;
+  text-align:right;
+  height:500px;
+  width:600px;
+}
+
+gmap-canvas {
+  overflow:hidden;
+  background:none!important;
+  height:500px;
+  width:600px;
+}
+
