--- a/www/styles.css
+++ b/www/styles.css
@@ -7,14 +7,14 @@
 mapouter {
   position:relative;
   text-align:right;
-  height:500px;
-  width:600px;
-}
+  /* height:500px; */
+  width:auto;
+} 
 
 gmap-canvas {
   overflow:hidden;
   background:none!important;
-  height:500px;
-  width:600px;
+  /* height:500px; */
+  width:auto;
 }
 
